Add script with CSP hash

--- a/src/Web/Pages/Index.cshtml
+++ b/src/Web/Pages/Index.cshtml
@@ -43,3 +43,15 @@
         </div>
     }
 </div>
+
+@section scripts {
+    <script asp-add-content-to-csp>
+        // script to autosubmit the form when a filter is changed
+        $(function () {
+            $('.esh-catalog-filter').change(function () {
+                $(this).closest('form').submit();
+            });
+        });
+    
+    </script>
+}
